--- a/.gitignore
+++ b/.gitignore
@@ -11,3 +11,5 @@
 /assignments/UNIT 1/HW1(int,float,short)/Area of a Decagonal Prism (short)/AreaDecagonalPrism/build/
 /assignments/UNIT 1/HW1(int,float,short)/Area of a Decagonal Prism (float)/AreaDecagonalPrism/nbproject/private/
 /assignments/UNIT 1/HW1(int,float,short)/Area of a Decagonal Prism (float)/AreaDecagonalPrism/build/
+/workshops/unit1/WS04LogicalOperators/nbproject/private/
+/workshops/unit1/WS04LogicalOperators/build/
