--- a/.gitignore
+++ b/.gitignore
@@ -13,3 +13,5 @@
 /assignments/UNIT 1/HW1(int,float,short)/Area of a Decagonal Prism (float)/AreaDecagonalPrism/build/
 /workshops/unit1/WS04LogicalOperators/nbproject/private/
 /workshops/unit1/WS04LogicalOperators/build/
+/workshops/unit1/WS05Interations/nbproject/private/
+/workshops/unit1/WS05Interations/build/
