--- a/.gitignore
+++ b/.gitignore
@@ -15,3 +15,11 @@
 /workshops/unit1/WS04LogicalOperators/build/
 /workshops/unit1/WS05Interations/nbproject/private/
 /workshops/unit1/WS05Interations/build/
+/assignments/UNIT 1/HW02Iteration/nbproject/private/
+/assignments/UNIT 1/HW02Iteration/build/
+/assignments/UNIT 1/HW3(while,for)/while/LoopWhile/nbproject/private/
+/assignments/UNIT 1/HW3(while,for)/for/ForLoop/nbproject/private/
+/assignments/UNIT 1/HW3(while,for)/for/ForLoop/build/
+/assignments/UNIT 1/HW3(while,for)/while/LoopWhile/build/
+/assignments/UNIT 1/HW3(while,for)/exercise/ExerciseLoop/nbproject/private/
+/assignments/UNIT 1/HW3(while,for)/exercise/ExerciseLoop/build/
