--- a/.gitignore
+++ b/.gitignore
@@ -23,3 +23,7 @@
 /assignments/UNIT 1/HW3(while,for)/while/LoopWhile/build/
 /assignments/UNIT 1/HW3(while,for)/exercise/ExerciseLoop/nbproject/private/
 /assignments/UNIT 1/HW3(while,for)/exercise/ExerciseLoop/build/
+/workshops/unit1/WS07Menus/nbproject/private/
+/workshops/unit1/WS07Menus/build/
+/assignments/UNIT 1/HW4(Menu)/nbproject/private/
+/assignments/UNIT 1/HW4(Menu)/build/
