--- a/.gitignore
+++ b/.gitignore
@@ -27,3 +27,5 @@
 /workshops/unit1/WS07Menus/build/
 /assignments/UNIT 1/HW4(Menu)/nbproject/private/
 /assignments/UNIT 1/HW4(Menu)/build/
+/Exam Unit 1/Potosí Daniel Q11/PotosíDanielQ11/nbproject/private/
+/Exam Unit 1/Potosí Daniel Q11/PotosíDanielQ11/build/
