--- a/.gitignore
+++ b/.gitignore
@@ -29,3 +29,5 @@
 /assignments/UNIT 1/HW4(Menu)/build/
 /Exam Unit 1/Potosí Daniel Q11/PotosíDanielQ11/nbproject/private/
 /Exam Unit 1/Potosí Daniel Q11/PotosíDanielQ11/build/
+/ProjectUnit1/nbproject/private/
+/ProjectUnit1/build/
