--- a/.gitignore
+++ b/.gitignore
@@ -31,3 +31,5 @@
 /Exam Unit 1/Potosí Daniel Q11/PotosíDanielQ11/build/
 /ProjectUnit1/nbproject/private/
 /ProjectUnit1/build/
+/workshops/unit2/ExamQ11Solution/nbproject/private/
+/workshops/unit2/ExamQ11Solution/build/
