--- a/.gitignore
+++ b/.gitignore
@@ -33,3 +33,7 @@
 /ProjectUnit1/build/
 /workshops/unit2/ExamQ11Solution/nbproject/private/
 /workshops/unit2/ExamQ11Solution/build/
+/assignments/UNIT 2/HW01(factorial)/nbproject/private/
+/assignments/UNIT 2/HW01(factorial)/build/
+/assignments/UNIT 2/HW05(factorial)/nbproject/private/
+/assignments/UNIT 2/HW05(factorial)/build/
