--- a/.gitignore
+++ b/.gitignore
@@ -37,3 +37,5 @@
 /assignments/UNIT 2/HW01(factorial)/build/
 /assignments/UNIT 2/HW05(factorial)/nbproject/private/
 /assignments/UNIT 2/HW05(factorial)/build/
+/assignments/UNIT 2/HW09(EmbeddedStructures)/nbproject/private/
+/assignments/UNIT 2/HW09(EmbeddedStructures)/build/
