--- a/.gitignore
+++ b/.gitignore
@@ -39,3 +39,4 @@
 /assignments/UNIT 2/HW05(factorial)/build/
 /assignments/UNIT 2/HW09(EmbeddedStructures)/nbproject/private/
 /assignments/UNIT 2/HW09(EmbeddedStructures)/build/
+/assignments/UNIT 2/HW09EmbeddedStructures/nbproject/private/
