--- a/.gitignore
+++ b/.gitignore
@@ -40,3 +40,5 @@
 /assignments/UNIT 2/HW09(EmbeddedStructures)/nbproject/private/
 /assignments/UNIT 2/HW09(EmbeddedStructures)/build/
 /assignments/UNIT 2/HW09EmbeddedStructures/nbproject/private/
+/workshops/unit2/WS09(funtions)/nbproject/private/
+/workshops/unit2/WS09(funtions)/build/
