--- a/.gitignore
+++ b/.gitignore
@@ -42,3 +42,6 @@
 /assignments/UNIT 2/HW09EmbeddedStructures/nbproject/private/
 /workshops/unit2/WS09(funtions)/nbproject/private/
 /workshops/unit2/WS09(funtions)/build/
+/HW09(funtions)/nbproject/private/
+/assignments/UNIT 2/HW10(Funtions)/nbproject/private/
+/assignments/UNIT 2/HW10(Funtions)/build/
