--- a/.gitignore
+++ b/.gitignore
@@ -45,3 +45,5 @@
 /HW09(funtions)/nbproject/private/
 /assignments/UNIT 2/HW10(Funtions)/nbproject/private/
 /assignments/UNIT 2/HW10(Funtions)/build/
+/assignments/UNIT 2/HW11(Sucesion)/nbproject/private/
+/assignments/UNIT 2/HW11(Sucesion)/build/
