--- a/.gitignore
+++ b/.gitignore
@@ -47,3 +47,4 @@
 /assignments/UNIT 2/HW10(Funtions)/build/
 /assignments/UNIT 2/HW11(Sucesion)/nbproject/private/
 /assignments/UNIT 2/HW11(Sucesion)/build/
+/assignments/UNIT 2/HW12(Recursion)/nbproject/private/
