--- a/.gitignore
+++ b/.gitignore
@@ -48,3 +48,5 @@
 /assignments/UNIT 2/HW11(Sucesion)/nbproject/private/
 /assignments/UNIT 2/HW11(Sucesion)/build/
 /assignments/UNIT 2/HW12(Recursion)/nbproject/private/
+/workshops/unit2/WS10(libraries)/nbproject/private/
+/workshops/unit2/WS10(libraries)/build/
