--- a/.gitignore
+++ b/.gitignore
@@ -50,3 +50,6 @@
 /assignments/UNIT 2/HW12(Recursion)/nbproject/private/
 /workshops/unit2/WS10(libraries)/nbproject/private/
 /workshops/unit2/WS10(libraries)/build/
+/HW12(taxes)/nbproject/private/
+/assignments/UNIT 2/HW12(Taxes)/nbproject/private/
+/assignments/UNIT 2/HW12(Taxes)/build/
