--- a/.gitignore
+++ b/.gitignore
@@ -53,3 +53,5 @@
 /HW12(taxes)/nbproject/private/
 /assignments/UNIT 2/HW12(Taxes)/nbproject/private/
 /assignments/UNIT 2/HW12(Taxes)/build/
+/workshops/unit2/WS13(Task)/nbproject/private/
+/workshops/unit2/WS13(Task)/build/
