--- a/.gitignore
+++ b/.gitignore
@@ -55,3 +55,5 @@
 /assignments/UNIT 2/HW12(Taxes)/build/
 /workshops/unit2/WS13(Task)/nbproject/private/
 /workshops/unit2/WS13(Task)/build/
+/workshops/unit2/WS14(Arrays)/nbproject/private/
+/workshops/unit2/WS14(Arrays)/build/
