--- a/.gitignore
+++ b/.gitignore
@@ -57,3 +57,5 @@
 /workshops/unit2/WS13(Task)/build/
 /workshops/unit2/WS14(Arrays)/nbproject/private/
 /workshops/unit2/WS14(Arrays)/build/
+/assignments/UNIT 2/HW14(Arrays)/nbproject/private/
+/assignments/UNIT 2/HW14(Arrays)/build/
