--- a/.gitignore
+++ b/.gitignore
@@ -59,3 +59,5 @@
 /workshops/unit2/WS14(Arrays)/build/
 /assignments/UNIT 2/HW14(Arrays)/nbproject/private/
 /assignments/UNIT 2/HW14(Arrays)/build/
+/Quizzes/Unit2/Quiz1(SAG)/nbproject/private/
+/Quizzes/Unit2/Quiz1(SAG)/build/
