--- a/.gitignore
+++ b/.gitignore
@@ -61,3 +61,8 @@
 /assignments/UNIT 2/HW14(Arrays)/build/
 /Quizzes/Unit2/Quiz1(SAG)/nbproject/private/
 /Quizzes/Unit2/Quiz1(SAG)/build/
+/workshops/unit2/WS15(SAG)/nbproject/private/
+/workshops/unit2/WS15(SAG)/build/
+/workshops/unit2/WS16(MatrixAddition)/nbproject/private/
+/workshops/unit2/WS16(MatrixAddition)/build/
+/assignments/UNIT 2/HW15(MatrixSubtraction)/nbproject/private/
