--- a/.gitignore
+++ b/.gitignore
@@ -66,3 +66,5 @@
 /workshops/unit2/WS16(MatrixAddition)/nbproject/private/
 /workshops/unit2/WS16(MatrixAddition)/build/
 /assignments/UNIT 2/HW15(MatrixSubtraction)/nbproject/private/
+/workshops/unit2/WS17(MatrixTransposition)/nbproject/private/
+/workshops/unit2/WS17(MatrixTransposition)/build/
