--- a/.gitignore
+++ b/.gitignore
@@ -68,3 +68,8 @@
 /assignments/UNIT 2/HW15(MatrixSubtraction)/nbproject/private/
 /workshops/unit2/WS17(MatrixTransposition)/nbproject/private/
 /workshops/unit2/WS17(MatrixTransposition)/build/
+/assignments/UNIT 2/HW16(MatrixTransposition)/nbproject/private/
+/assignments/UNIT 2/HW16(MatrixTransposition)/build/
+/Exam Unit 2/(PotosíD)Q11/nbproject/private/
+/Exam Unit 2/(PotosíD)Q11/build/
+/Exam Unit 2/PotosíDQ11/nbproject/private/
