--- a/.gitignore
+++ b/.gitignore
@@ -73,3 +73,5 @@
 /Exam Unit 2/(PotosíD)Q11/nbproject/private/
 /Exam Unit 2/(PotosíD)Q11/build/
 /Exam Unit 2/PotosíDQ11/nbproject/private/
+/Exams/Exam Unit 1/Potosí Daniel Q11/PotosíDanielQ11/build/
+/Exams/Exam Unit 1/Potosí Daniel Q11/PotosíDanielQ11/nbproject/private/
