--- a/.gitignore
+++ b/.gitignore
@@ -75,3 +75,5 @@
 /Exam Unit 2/PotosíDQ11/nbproject/private/
 /Exams/Exam Unit 1/Potosí Daniel Q11/PotosíDanielQ11/build/
 /Exams/Exam Unit 1/Potosí Daniel Q11/PotosíDanielQ11/nbproject/private/
+/workshops/unit3/WS18(EvelinQuilca)/nbproject/private/
+/workshops/unit3/WS18(EvelinQuilca)/build/
