--- a/.gitignore
+++ b/.gitignore
@@ -77,3 +77,6 @@
 /Exams/Exam Unit 1/Potosí Daniel Q11/PotosíDanielQ11/nbproject/private/
 /workshops/unit3/WS18(EvelinQuilca)/nbproject/private/
 /workshops/unit3/WS18(EvelinQuilca)/build/
+/ProjectUnit1/Space3D/nbproject/private/
+/ProjectUnit1/Space3D/build/
+/ProjectUnit1/Space3D/dist/
