--- a/.gitignore
+++ b/.gitignore
@@ -80,3 +80,4 @@
 /ProjectUnit1/Space3D/nbproject/private/
 /ProjectUnit1/Space3D/build/
 /ProjectUnit1/Space3D/dist/
+/workshops/unit2/WS09(funtions)/dist/
