--- a/.gitignore
+++ b/.gitignore
@@ -81,3 +81,7 @@
 /ProjectUnit1/Space3D/build/
 /ProjectUnit1/Space3D/dist/
 /workshops/unit2/WS09(funtions)/dist/
+/assignments/UNIT 2/HW12(Recursion)/build/
+/assignments/UNIT 2/HW12(Recursion)/dist/
+/assignments/UNIT 2/HW11(Sucesion)/dist/
+/assignments/UNIT 2/HW14(Arrays)/dist/
