--- a/.gitignore
+++ b/.gitignore
@@ -85,3 +85,12 @@
 /assignments/UNIT 2/HW12(Recursion)/dist/
 /assignments/UNIT 2/HW11(Sucesion)/dist/
 /assignments/UNIT 2/HW14(Arrays)/dist/
+/workshops/unit3/WS21(functions)/nbproject/private/
+/workshops/unit3/WS21(functions)/build/
+/workshops/unit3/WS21(functions)/dist/
+/workshops/unit3/WS22(modularity)/ModularCalculator/nbproject/private/
+/workshops/unit3/WS22(modularity)/ModularCalculator/build/
+/workshops/unit3/WS23(libraries)/TaxDeclaration/nbproject/private/
+/workshops/unit3/WS23(libraries)/TaxLibrary/nbproject/private/
+/workshops/unit3/WS23(libraries)/TaxLibrary/dist/
+/workshops/unit3/WS23(libraries)/TaxLibrary/build/
