--- a/.gitignore
+++ b/.gitignore
@@ -94,3 +94,6 @@
 /workshops/unit3/WS23(libraries)/TaxLibrary/nbproject/private/
 /workshops/unit3/WS23(libraries)/TaxLibrary/dist/
 /workshops/unit3/WS23(libraries)/TaxLibrary/build/
+/assignments/UNIT 2/HW17(MatrixLibraries)/MatrixLibraries/nbproject/private/
+/assignments/UNIT 2/HW17(MatrixLibraries)/MatrixLibraries/build/
+/assignments/UNIT 2/HW15(MatrixSubtraction)/build/
